css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background: #f6f8f9;
    font-family: Arial, Helvetica, sans-serif;
}

/* Banner */
.banner {
    background-color: white;
    height: 70px;
}

.logo{
    margin-top: 12px;
    padding-left: 30px;
}

.logo-name {
    display: inline-block;
    font-size: 40px;
    font-weight: 900;
}

/* Banner */

/*container*/
.container {
    margin-top: 40px;
    width: 800px;
    margin: 40px auto 0;
    padding-left: 50px;
    color: #434851;
}

.spacing {
    padding-top: 20px;
}
/*container*/

/*adding section */

.adding-bar {
    padding:20px;
    margin-bottom: 5px;
    background-color: white;
    padding-left: 120px;
}
.case1 {
    background-color: #14aaf5;
    color: white;
    border-radius: 5px;
    padding: 7px;
}

.case2 {
        color: #d1d7db;
        border: solid 1px #d1d7db;
        border-radius: 5px;
        padding: 7px;
    }

/*     /adding section */

/* tasks */

.tasks {
    background-color: white;
    padding-left: 120px;
}

.line {
    margin: 20px;
}

.checked{
    display: inline-block;
    width: 20px;
    height: 20px;
    line-height: 20px;
    border: solid 1px #65d5c2;
    text-align: center;
    border-radius: 50%;
    color: #65d5c2;
    margin-right: 10px;
}

.not-check{
    display: inline-block;
    width: 20px;
    height: 20px;
    line-height: 20px;
    border: solid 1px #ff1010;
    text-align: center;
    border-radius: 50%;
    color: #ff1010;
    margin-right: 10px;
}

.category {
    display: inline-block;
    background-color: blue;
    color: white;
    border-radius: 10px;
    padding: 5px;
    font-size: x-small;
    margin-left: 5px;
}


/*       /tasks */


/* Categories */
    .editorial{
        background-color: #09a9ed;
    }

    .q1-goals{
        background-color: #ab5de6;
    }

    .recruiting{
        background-color: #2cc6ab;
    }

    .mobile {
        background-color: #ff9b00;    
    }

    .websites {
        background-color: #ec4a9d;   
    }

    .sale{
        background-color: #a3d116;   
    }



/* Categories*/

